@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-29T08:14:42Z",
+  "timestamp" : "2022-05-29T16:15:21Z",
   "count_outdated" : 302,
   "uniques_outdated" : 156,
-  "count" : 328,
+  "count" : 329,
   "uniques" : 176,
   "clones" : [
     {
@@ -56,8 +56,8 @@
     },
     {
       "timestamp": "2022-05-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
